--- a/tracing/tracing/ui/analysis/power_sample_summary_table_test.html
+++ b/tracing/tracing/ui/analysis/power_sample_summary_table_test.html
@@ -27,7 +27,7 @@ tr.b.unittest.testSuite(function() {
     series.addPowerSample(3000, 4);
 
     const table = document.createElement('tr-ui-a-power-sample-summary-table');
-    table.samples = new EventSet(series.samples);
+    table.samples = {'Power': new EventSet(series.samples)};
 
     this.addHTMLOutput(table);
   });
@@ -41,7 +41,7 @@ tr.b.unittest.testSuite(function() {
 
   test('setSamples_noPowerSamples', function() {
     const table = document.createElement('tr-ui-a-power-sample-summary-table');
-    table.samples = new EventSet([]);
+    table.samples = {'Power': new EventSet([])};
 
     assert.lengthOf(table.$.table.tableRows, 0);
   });
@@ -52,9 +52,10 @@ tr.b.unittest.testSuite(function() {
     series.addPowerSample(0, 1);
 
     const table = document.createElement('tr-ui-a-power-sample-summary-table');
-    table.samples = new EventSet(series.samples);
+    table.samples = {'Power': new EventSet(series.samples)};
 
     assert.lengthOf(table.$.table.tableRows, 1);
+    assert.strictEqual(table.$.table.tableRows[0].type, 'Power');
     assert.strictEqual(table.$.table.tableRows[0].min, 1);
     assert.strictEqual(table.$.table.tableRows[0].max, 1);
     assert.strictEqual(
@@ -70,9 +71,10 @@ tr.b.unittest.testSuite(function() {
     series.addPowerSample(1000, 2);
 
     const table = document.createElement('tr-ui-a-power-sample-summary-table');
-    table.samples = new EventSet(series.samples);
+    table.samples = {'Power': new EventSet(series.samples)};
 
     assert.lengthOf(table.$.table.tableRows, 1);
+    assert.strictEqual(table.$.table.tableRows[0].type, 'Power');
     assert.strictEqual(table.$.table.tableRows[0].min, 1);
     assert.strictEqual(table.$.table.tableRows[0].max, 2);
     assert.strictEqual(table.$.table.tableRows[0].timeWeightedAverageInW, 1);
@@ -88,14 +90,53 @@ tr.b.unittest.testSuite(function() {
     series.addPowerSample(2000, 3);
 
     const table = document.createElement('tr-ui-a-power-sample-summary-table');
-    table.samples = new EventSet(series.samples);
+    table.samples = {'Power': new EventSet(series.samples)};
 
     assert.lengthOf(table.$.table.tableRows, 1);
+    assert.strictEqual(table.$.table.tableRows[0].type, 'Power');
     assert.strictEqual(table.$.table.tableRows[0].min, 1);
     assert.strictEqual(table.$.table.tableRows[0].max, 3);
     assert.strictEqual(table.$.table.tableRows[0].timeWeightedAverageInW, 1.5);
     assert.strictEqual(table.$.table.tableRows[0].energyConsumedInJ, 3);
     assert.strictEqual(table.$.table.tableRows[0].sampleCount, 3);
+  });
+
+  test('setSamples_threeTypesPowerSamples', function() {
+    const series1 = new PowerSeries(new Model().device);
+    const series2 = new PowerSeries(new Model().device, 'CPU Power');
+    const series3 = new PowerSeries(new Model().device, 'iGPU Power');
+
+    series1.addPowerSample(0, 1);
+    series1.addPowerSample(1000, 2);
+    series2.addPowerSample(0, 3);
+    series2.addPowerSample(2000, 5);
+    series3.addPowerSample(0, 7);
+    series3.addPowerSample(3000, 9);
+
+    const table = document.createElement('tr-ui-a-power-sample-summary-table');
+    table.samples = {'Power': (new EventSet(series1.samples)),
+                     'CPU Power': (new EventSet(series2.samples)),
+                     'iGPU Power': (new EventSet(series3.samples))};
+
+    assert.lengthOf(table.$.table.tableRows, 3);
+    assert.strictEqual(table.$.table.tableRows[0].type, 'Power');
+    assert.strictEqual(table.$.table.tableRows[0].min, 1);
+    assert.strictEqual(table.$.table.tableRows[0].max, 2);
+    assert.strictEqual(table.$.table.tableRows[0].timeWeightedAverageInW, 1);
+    assert.strictEqual(table.$.table.tableRows[0].energyConsumedInJ, 1);
+    assert.strictEqual(table.$.table.tableRows[0].sampleCount, 2);
+    assert.strictEqual(table.$.table.tableRows[1].type, 'CPU Power');
+    assert.strictEqual(table.$.table.tableRows[1].min, 3);
+    assert.strictEqual(table.$.table.tableRows[1].max, 5);
+    assert.strictEqual(table.$.table.tableRows[1].timeWeightedAverageInW, 3);
+    assert.strictEqual(table.$.table.tableRows[1].energyConsumedInJ, 6);
+    assert.strictEqual(table.$.table.tableRows[1].sampleCount, 2);
+    assert.strictEqual(table.$.table.tableRows[2].type, 'iGPU Power');
+    assert.strictEqual(table.$.table.tableRows[2].min, 7);
+    assert.strictEqual(table.$.table.tableRows[2].max, 9);
+    assert.strictEqual(table.$.table.tableRows[2].timeWeightedAverageInW, 7);
+    assert.strictEqual(table.$.table.tableRows[2].energyConsumedInJ, 21);
+    assert.strictEqual(table.$.table.tableRows[2].sampleCount, 2);
   });
 
   test('setSamples_columnsInitialized', function() {
@@ -106,32 +147,36 @@ tr.b.unittest.testSuite(function() {
     series.addPowerSample(2000, 3);
 
     const table = document.createElement('tr-ui-a-power-sample-summary-table');
-    table.samples = new EventSet(series.samples);
+    table.samples = {'Power': new EventSet(series.samples)};
 
     const row = table.$.table.tableRows[0];
     const columns = table.$.table.tableColumns;
 
-    assert.lengthOf(columns, 5);
+    assert.lengthOf(columns, 6);
 
-    assert.strictEqual(columns[0].title, 'Min power');
-    assert.strictEqual(columns[0].width, '100px');
-    assert.strictEqual(columns[0].value(row), '1.000 W');
+    assert.strictEqual(columns[0].title, 'Sample');
+    assert.strictEqual(columns[0].width, '120px');
+    assert.strictEqual(columns[0].value(row), 'Power');
 
-    assert.strictEqual(columns[1].title, 'Max power');
+    assert.strictEqual(columns[1].title, 'Min power');
     assert.strictEqual(columns[1].width, '100px');
-    assert.strictEqual(columns[1].value(row), '3.000 W');
+    assert.strictEqual(columns[1].value(row), '1.000 W');
 
-    assert.strictEqual(columns[2].title, 'Time-weighted average');
+    assert.strictEqual(columns[2].title, 'Max power');
     assert.strictEqual(columns[2].width, '100px');
-    assert.strictEqual(columns[2].value(row), '1.500 W');
+    assert.strictEqual(columns[2].value(row), '3.000 W');
 
-    assert.strictEqual(columns[3].title, 'Energy consumed');
+    assert.strictEqual(columns[3].title, 'Time-weighted average');
     assert.strictEqual(columns[3].width, '100px');
-    assert.strictEqual(columns[3].value(row), '3.000 J');
+    assert.strictEqual(columns[3].value(row), '1.500 W');
 
-    assert.strictEqual(columns[4].title, 'Sample count');
-    assert.strictEqual(columns[4].width, '100%');
-    assert.strictEqual(columns[4].value(row), 3);
+    assert.strictEqual(columns[4].title, 'Energy consumed');
+    assert.strictEqual(columns[4].width, '100px');
+    assert.strictEqual(columns[4].value(row), '3.000 J');
+
+    assert.strictEqual(columns[5].title, 'Sample count');
+    assert.strictEqual(columns[5].width, '100%');
+    assert.strictEqual(columns[5].value(row), 3);
   });
 });
 </script>
